Fix navbar style issues on Safari

--- a/app/assets/stylesheets/navigation_bar.scss
+++ b/app/assets/stylesheets/navigation_bar.scss
@@ -45,7 +45,6 @@ nav {
     top: var(--navigation-height);
 
     display: grid;
-    grid-auto-rows: 100%;
 
     width: 100%;
 
